main image added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title><product-preview-cards></product-preview-cards></title>
 </head>
 <body>
-    
+    <img src="./images/1.webp" id="main-image">
 </body>
 </html>
