--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><product-preview-cards></product-preview-cards></title>
+    <style>
+        #main-image{
+            width: 300px;
+            height: 300px;
+            border: 0.5px solid black;
+            border-radius: 20px;
+            object-fit: cover;
+            display: block;
+            margin: 40px auto;
+            padding: 15px;
+            box-shadow: 0px 0px 10px 0px rgb(104, 102, 102);
+        }
+    </style>
 </head>
 <body>
     <img src="./images/1.webp" id="main-image">
+
 </body>
 </html>
