--- a/index.html
+++ b/index.html
@@ -16,10 +16,19 @@
             padding: 15px;
             box-shadow: 0px 0px 10px 0px rgb(104, 102, 102);
         }
+        
     </style>
 </head>
 <body>
     <img src="./images/1.webp" id="main-image">
+
+    <div class="image-container">
+        <img src="./images/1.webp" id="product-img">
+        <img src="./images/2.webp" id="product-img">
+        <img src="./images/3.webp" id="product-img">
+        <img src="./images/4.webp" id="product-img">
+        <img src="./images/5.webp" id="product-img">
+    </div>
 
 </body>
 </html>
