--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
             padding: 15px;
             box-shadow: 0px 0px 10px 0px rgb(104, 102, 102);
         }
-        
+
+        .image-container{
+            display: flex;
+            justify-content: center;
+        }
+        #product-img{
+            height: 60px;
+            border: 1px solid black;
+            border-radius: 5px;
+            object-fit: cover;
+            margin: 20px 5px;
+            cursor: pointer;
+        }
+
     </style>
 </head>
 <body>
