hover effect added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             cursor: pointer;
         }
 
+        #product-img:hover{
+            height: 70px;
+            width: 70px;
+            transition: 0.5s;
+        }
     </style>
 </head>
 <body>
