media query added for small devices

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
             width: 70px;
             transition: 0.5s;
         }
+
+        @media (max-width:400px) {
+           #main-image{
+            width: 85%;
+           } 
+
+           .image-container{
+            display: flex;
+            flex-wrap: wrap;
+           }
+        }
     </style>
 </head>
 <body>
